project name fix

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-The following authors have created the source code of "Yandex DataSync JS API"
+The following authors have created the source code of "Yandex Mysync"
 published and distributed by YANDEX LLC as the owner:
 
 Dmitry Smal mialinx@yandex-team.ru
