--- a/tests/images/mysql/my.cnf.8.4
+++ b/tests/images/mysql/my.cnf.8.4
@@ -16,6 +16,7 @@ quote-names
 max_allowed_packet = 16M
 
 [mysqld]
+mysql_native_password = ON
 plugin_load_add = 'rpl_semi_sync_master=semisync_master.so;rpl_semi_sync_slave=semisync_slave.so'
 user = mysql
 port = 3306
